--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.data filter=lfs diff=lfs merge=lfs -text
 *.data.gz filter=lfs diff=lfs merge=lfs -text
+*.data.unityweb filter=lfs diff=lfs merge=lfs -text
